--- a/meteo.html
+++ b/meteo.html
@@ -9,6 +9,26 @@
     <title>Météo_Api</title>
 </head>
 <body>
-
+    <div class="container">
+        <div class="row justify-content-center">
+            <div class="col-12 col-sm-6 my-3">
+                <form>
+                    <div class="form-group">
+                        <input type="text" class="form-control" id="inputCity">
+                    </div>
+                    <button type="submit" class="btn btn-info btn-black">Recherche</button>
+                </form>
+            </div>
+            <div class="col-12 col-sm-6 d-flex justify-content-center my-3">
+                <div class="box container">
+                    <div id="city" class="box"></div>
+                    <div id="temp" class="box"></div>
+                    <div id="humidity" class="box"></div>
+                    <div id="wind" class="box"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
