meteo1: récupération et affichage des données

--- a/2/meteo.html
+++ b/2/meteo.html
@@ -17,10 +17,10 @@
         <i class="wi wi-day-rain"></i>
 
         <h2>
-            <span class="temperature">25</span> C° (<span class="conditions">Ciel dégagé</span> )
+            <span id="temperature">25</span> C° (<span id="conditions">Ciel dégagé</span> )
         </h2>
     </section>
 
-    <script src="js/app.js"></script>
+    <script src="./js/app.js"></script>
 </body>
 </html>
