--- a/1/meteo.html
+++ b/1/meteo.html
@@ -19,8 +19,9 @@
                     <button type="submit" class="btn btn-info btn-black">Recherche</button>
                 </form>
             </div>
+
             <div class="col-12 col-sm-6 d-flex justify-content-center my-3">
-                <div class="box container">
+                <div class="box-container">
                     <div id="city" class="box"></div>
                     <div id="temp" class="box"></div>
                     <div id="humidity" class="box"></div>
