--- a/2/meteo.html
+++ b/2/meteo.html
@@ -10,17 +10,17 @@
 <body>
     <section id="app">
         <h1>
-            <span class="ville">Marseille</span>
+            <span id="ville"></span>
             <span class="tooltip">Voir la météo dans un autre ville</span>
         </h1>
 
-        <i class="wi wi-day-rain"></i>
+        <i class="wi"></i>
 
         <h2>
-            <span id="temperature">25</span> C° (<span id="conditions">Ciel dégagé</span> )
+            <span id="temperature"></span> C° (<span id="conditions"></span> )
         </h2>
     </section>
 
-    <script src="./js/app.js"></script>
+    <script src="./js/aa.js"></script>
 </body>
 </html>
