--- a/2/meteo.html
+++ b/2/meteo.html
@@ -21,6 +21,7 @@
         </h2>
     </section>
 
-    <script src="./js/aa.js"></script>
+
+    <script src="./js/app.js"></script>
 </body>
 </html>
