meteo3: recuperation et affichage des donnees demandees et ajout des icons

--- a/3/meteo.html
+++ b/3/meteo.html
@@ -23,13 +23,16 @@
             </div>
 
             <div class="col-12 col-sm-6 d-flex justify-content-center my-3">
-                <div id="city" class="box"></div>
+                <div id="city" class="box"><i class="fad fa-sunrise"></i></div>
                 <div class="box-container">
+                    <div id="image" class="box"><img id="img" src="" alt=""></div>
                     <div id="temp" class="box"></div>
                     <div id="sky" class="box"></div>
                     <div id="wind" class="box"></div>
                     <div id="humidity" class="box"></div>
-                    <div id="image" class="box"><img id="img" src="" alt=""></div>
+                    <div id="pressure" class="box"></div>
+                    <div id="sunrise" class="box"></div>
+                    <div id="sunset" class="box"></div>
                 </div>
             </div>
         </div>
