--- a/3/meteo.html
+++ b/3/meteo.html
@@ -19,15 +19,15 @@
                     <button type="submit" class="btn btn-info btn-black">Recherche par ville</button>
                     <button type="submit" class="btn btn-info btn-black">Recherche par code postal</button>
                     <button type="submit" class="btn btn-info btn-black">Recherche par coordonnées géographiques</button>
+
                 </form>
             </div>
 
             <div class="col-12 col-sm-6 d-flex justify-content-center my-3">
-                <div id="city" class="box"><i class="fad fa-sunrise"></i></div>
                 <div class="box-container">
+                    <div id="general" class="box"></div>
                     <div id="image" class="box"><img id="img" src="" alt=""></div>
                     <div id="temp" class="box"></div>
-                    <div id="sky" class="box"></div>
                     <div id="wind" class="box"></div>
                     <div id="humidity" class="box"></div>
                     <div id="pressure" class="box"></div>
