--- a/3/meteo.html
+++ b/3/meteo.html
@@ -14,7 +14,20 @@
             <div class="col-12 col-sm-6 my-3">
                 <form>
                     <div class="form-group">
+                        <label for="pression">Entre le nom d'un ville :</label>
                         <input type="text" class="form-control" id="inputCity">
+                    </div>
+                    <div>
+                        <label for="pression">Afficher la pression</label>
+                        <input type="checkbox" id="pression" name="scales" checked>
+                    </div>
+                    <div>
+                        <label for="leverSoleil">Afficher l'heure du lever du soleil</label>
+                        <input type="checkbox" id="leverSoleil" name="scales">
+                    </div>
+                    <div>
+                        <label for="coucherSoleil">Afficher l'heure du lever du soleil</label>
+                        <input type="checkbox" id="coucherSoleil" name="scales">
                     </div>
                     <button type="submit" class="btn btn-info btn-black">Recherche par ville</button>
                     <button type="submit" class="btn btn-info btn-black">Recherche par code postal</button>
