meteo3: récupération des ids des div a cacher en js

--- a/3/meteo.html
+++ b/3/meteo.html
@@ -17,18 +17,11 @@
                         <label for="pression">Entre le nom d'un ville :</label>
                         <input type="text" class="form-control" id="inputCity">
                     </div>
-                    <div>
-                        <label for="pression">Afficher la pression</label>
-                        <input type="checkbox" id="pression" name="scales" checked>
-                    </div>
-                    <div>
-                        <label for="leverSoleil">Afficher l'heure du lever du soleil</label>
-                        <input type="checkbox" id="leverSoleil" name="scales">
-                    </div>
-                    <div>
-                        <label for="coucherSoleil">Afficher l'heure du lever du soleil</label>
-                        <input type="checkbox" id="coucherSoleil" name="scales">
-                    </div>
+
+                    <button id="pression">Afficher la pression</button>
+                    <button id="leverSoleil">Afficher l'heure du lever du soleil</button>
+                    <button id="coucherSoleil">Afficher l'heure du coucher du soleil</button>
+
                     <button type="submit" class="btn btn-info btn-black">Recherche par ville</button>
                     <button type="submit" class="btn btn-info btn-black">Recherche par code postal</button>
                     <button type="submit" class="btn btn-info btn-black">Recherche par coordonnées géographiques</button>
