--- a/3/meteo.html
+++ b/3/meteo.html
@@ -17,30 +17,43 @@
                         <label for="inputCity">Entre le nom d'un ville :</label>
                         <input type="text" class="form-control" id="inputCity">
                     </div>
+                    <p>Recherche par : </p>
+                    <label>
+                        <input type="radio" name="search" id="citySearch" value="citySearch" required placeholder="Statut" checked>
+                        <span>Ville</span>
+                    </label>
+                    <label>
+                        <input type="radio" name="search" id="postalSearch" value="postalSearch" required placeholder="Statut">
+                        <span>Code postal</span>
+                    </label>
+                    <label>
+                        <input type="radio" name="search" id="coordsSearch" value="coordsSearch" required placeholder="Statut">
+                        <span>Coordonnées géographiques</span>
+                    </label>
 
-                    <button type="submit" class="btn btn-info btn-black">Recherche par ville</button>
-                    <button type="submit" class="btn btn-info btn-black">Recherche par code postal</button>
-                    <button type="submit" class="btn btn-info btn-black">Recherche par coordonnées géographiques</button>
+                    <button type="submit" class="btn btn-info btn-black">Valider</button>
 
+                    <h2 id="city"></h2>
+                    <p>Afficher ou cacher : </p>
                     <div>
                         <input type="checkbox" id="pression" name="pression">
-                        <label for="pression">Pression</label>
+                        <label for="pression">La pression</label>
                     </div>
                     <div>
                         <input type="checkbox" id="leverSoleil" name="leverSoleil">
-                        <label for="leverSoleil">Lever du soleil</label>
+                        <label for="leverSoleil">le lever du soleil</label>
                     </div>
                     <div>
                         <input type="checkbox" id="coucherSoleil" name="coucherSoleil">
-                        <label for="coucherSoleil">Coucher du soleil</label>
+                        <label for="coucherSoleil">le coucher du soleil</label>
                     </div>
                 </form>
             </div>
 
             <div class="col-12 col-sm-6 justify-content-center my-3">
                 <div class="box-container">
-                    <div id="general" class="box"></div>
-                    <div id="image" class="box"><img id="img" src="" alt=""></div>
+                    <div id="sky" class="box"></div>
+                    <div id="image" class="box"><img id="img" src="" alt="aspect du ciel"></div>
                     <div id="temp" class="box"></div>
                     <div id="wind" class="box"></div>
                     <div id="humidity" class="box"></div>
