meteo3: ajout des differents formulaires selon le critere de recherche

--- a/3/meteo.html
+++ b/3/meteo.html
@@ -14,7 +14,21 @@
             <div class="col-12 col-sm-6 my-3">
                 <form>
                     <div class="form-group">
-                        <label for="inputCity">Entre le nom d'un ville :</label>
+                        <label for="long">Entrez la longitude :</label>
+                        <input type="text" class="form-control" id="long">
+                        <label for="lat">Entrez la latitude :</label>
+                        <input type="text" class="form-control" id="lat">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="long">Entrez le code postale :</label>
+                        <input type="text" class="form-control" id="long">
+                        <label for="lat">Entrez le code pays (fr pour la france) :</label>
+                        <input type="text" class="form-control" id="lat"
+                    </div>
+
+                    <div class="form-group">
+                        <label for="inputCity">Entrez le nom d'un ville :</label>
                         <input type="text" class="form-control" id="inputCity">
                     </div>
                     <p>Recherche par : </p>
@@ -53,7 +67,7 @@
             <div class="col-12 col-sm-6 justify-content-center my-3">
                 <div class="box-container">
                     <div id="sky" class="box"></div>
-                    <div id="image" class="box"><img id="img" src="" alt="aspect du ciel"></div>
+                    <div id="image" class="box"><img id="img" src="" alt=""></div>
                     <div id="temp" class="box"></div>
                     <div id="wind" class="box"></div>
                     <div id="humidity" class="box"></div>
