meteo3: ajout de la recherche par code postal et/ou coordonnees gps

--- a/3/meteo.html
+++ b/3/meteo.html
@@ -35,10 +35,10 @@
                     </div>
 
                     <div id="postalDiv" class="form-group">
-                        <label for="long">Entrez le code postale :</label>
-                        <input type="text" class="form-control" id="long">
-                        <label for="lat">Entrez le code pays (fr pour la france) :</label>
-                        <input type="text" class="form-control" id="lat">
+                        <label for="zip_code">Entrez le code postale :</label>
+                        <input type="text" class="form-control" id="zip_code">
+                        <label for="country_code">Entrez le code pays (fr pour la france) :</label>
+                        <input type="text" class="form-control" id="country_code">
                     </div>
 
                     <div id="cityDiv" class="form-group">
